fix: replace token for the Docker build workflow

--- a/modules/repositories/files/workflows/docker-build.yaml
+++ b/modules/repositories/files/workflows/docker-build.yaml
@@ -16,5 +16,4 @@ jobs:
       build_context: "."
       dockerfile_path: "Dockerfile"
     secrets:
-      TERRAHARBOR_RELEASER_APP_ID: ${{ secrets.TERRAHARBOR_RELEASER_APP_ID }}
-      TERRAHARBOR_RELEASER_PRIVATE_KEY: ${{ secrets.TERRAHARBOR_RELEASER_PRIVATE_KEY }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
