--- a/modules/repositories/files/workflows/docker-build.yaml
+++ b/modules/repositories/files/workflows/docker-build.yaml
@@ -8,6 +8,10 @@ on:
     tags:
       - "v*"
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   docker-build:
     uses: terraharbor/github-actions-workflows/.github/workflows/docker-build.yaml@main
